# maybe-unwind

./: CHANGELOG.md  Cargo.toml  README.md  aliases.js  build.rs  search-index.js  settings.html  source-files.js
.github/workflows/: doc.yml  test.yml  workflow.yml
examples/: simple.rs
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/future/future/: trait.Future.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/maybe_unwind/: trait.FutureMaybeUnwindExt.js
implementors/pin_project/__private/: trait.PinnedDrop.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
maybe_unwind/: all.html  fn.capture_panic_info.html  fn.maybe_unwind.html  fn.reset_hook.html  fn.set_hook.html  index.html  sidebar-items.js  struct.Backtrace.html  struct.CapturedPanicInfo.html  struct.Location.html  struct.MaybeUnwind.html  struct.Unwind.html  struct.UnwindContext.html  trait.FutureMaybeUnwindExt.html
maybe_unwind/backtrace/: struct.Backtrace.html
maybe_unwind/futures/: struct.MaybeUnwind.html  trait.FutureMaybeUnwindExt.html
maybe_unwind/hook/: fn.capture_panic_info.html  fn.reset_hook.html  fn.set_hook.html
maybe_unwind/unwind/: fn.maybe_unwind.html  struct.Location.html  struct.Unwind.html
src/: backtrace.rs  context.rs  futures.rs  hook.rs  lib.rs  tls.rs  unwind.rs
src/maybe_unwind/: backtrace.rs.html  context.rs.html  futures.rs.html  hook.rs.html  lib.rs.html  tls.rs.html  unwind.rs.html
tests/: futures.rs  test.rs
