[package]
name = "maybe-unwind"
version = "0.0.1"
description = """
A variant of catch_unwind that also captures the panic information.
"""
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/ubnt-intrepid/maybe-unwind.git"
readme = "README.md"

[dependencies]
cfg-if = "0.1"
lazy_static = "1"
futures-core = { version = "0.3", optional = true }
pin-project = { version = "0.4", optional = true }

[dev-dependencies]
futures-executor = "0.3"

[features]
default = [ "futures" ]
futures = [ "futures-core", "pin-project" ]
