[package]
name = "maybe-unwind"
version = "0.3.0-dev"
publish = false
description = """
A wrapper of catch_unwind that also captures the panic information.
"""
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/ubnt-intrepid/maybe-unwind.git"
readme = "README.md"

include = [
    "/src/**/*.rs",
    "/tests/**/*.rs",
    "/Cargo.toml",
    "/CHANGELOG.md",
    "/LICENSE*",
    "/README.md",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
cfg-if = "0.1"
futures-core = { version = "0.3", optional = true }
pin-project = { version = "0.4", optional = true }

[dev-dependencies]
futures-executor = "0.3"
version-sync = "0.8"

[dev-dependencies.cargo-husky]
version = "1"
features = [ "precommit-hook", "run-cargo-fmt" ]

[features]
default = [ "futures" ]
futures = [ "futures-core", "pin-project" ]
nightly = []
