[package]
name = "maybe-unwind"
version = "0.3.0"
description = """
A wrapper of catch_unwind that also captures the panic information.
"""
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/ubnt-intrepid/maybe-unwind.git"
readme = "README.md"
build = "build.rs"

include = [
    "/build.rs",
    "/src/**/*.rs",
    "/tests/**/*.rs",
    "/Cargo.toml",
    "/CHANGELOG.md",
    "/LICENSE*",
    "/README.md",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustflags = [ "--cfg", "docs" ]

[dependencies]
futures-core = { version = "0.3", optional = true }

[dev-dependencies]
futures-executor = "0.3"
version-sync = "0.8"

[dev-dependencies.cargo-husky]
version = "1"
features = [ "precommit-hook", "run-cargo-fmt" ]

[features]
default = [ "futures" ]
futures = [ "futures-core" ]
